--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">compose timer</string>
     <string name="app_theme_label">Theme</string>
     <string name="app_chain_label">Time\'s chain settings</string>
+    <string name="app_icon_size_label">Navigation bar icon size</string>
 </resources>
